POC/force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Customer Segment (https://app.asana.com/0/1169811029711865/1195356407950369)</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Business (0 - 100 Employees)</fullName>
            </value>
            <value>
                <fullName>Mid Market (101 - 1000 Employees)</fullName>
            </value>
            <value>
                <fullName>Enterprise (1000+ Employees)</fullName>
            </value>
            <value>
                <fullName>0-50</fullName>
                <isActive>false</isActive>
                <label>0-50</label>
            </value>
            <value>
                <fullName>10000+</fullName>
                <isActive>false</isActive>
                <label>10000+</label>
            </value>
            <value>
                <fullName>1001-5000</fullName>
                <isActive>false</isActive>
                <label>1001-5000</label>
            </value>
            <value>
                <fullName>251-500</fullName>
                <isActive>false</isActive>
                <label>251-500</label>
            </value>
            <value>
                <fullName>5001-10000</fullName>
                <isActive>false</isActive>
                <label>5001-10000</label>
            </value>
            <value>
                <fullName>501-1000</fullName>
                <isActive>false</isActive>
                <label>501-1000</label>
            </value>
            <value>
                <fullName>51-250</fullName>
                <isActive>false</isActive>
                <label>51-250</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>