POC/force-app/main/default/objects/Account/fields/D_B_Error__c.field-meta.xml
<CustomField>
    <fullName>D_B_Error__c</fullName>
    <description>This field was created as a part of the Auto-Credit Check - Phase 2 project. It is used to capture the error thrown when an automated credit check can&#39;t be performed.</description>
    <label>D&amp;B Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>