POC/force-app/main/default/objects/Account/fields/D_B_Maximum_Credit_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>D_B_Maximum_Credit_Recommendation__c</fullName>
    <description>This field was created as a part of the Auto-Credit Check - Phase 2 project. It is populated via D&amp;B at the time a credit check is automated. It will not populate if a credit check is ran manually.</description>
    <label>D&amp;B Maximum Credit Recommendation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>