POC/force-app/main/default/objects/Account/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <description>From Redshift: The date the domain was initially created.  domains.__creation_time</description>
    <inlineHelpText>Date the domain was initially created</inlineHelpText>
    <label>Domain Date Created</label>
    <type>Date</type>
</CustomField>