POC/force-app/main/default/objects/Account/fields/Date_Joined_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined_Program__c</fullName>
    <description>Date Joined Program (https://app.asana.com/0/1169811029711865/1195356407950369)</description>
    <label>Date Joined Program</label>
    <type>Date</type>
</CustomField>