POC/force-app/main/default/objects/Account/fields/Date_of_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Activity__c</fullName>
    <description>Maximum date of activities on related Engagements (https://app.asana.com/0/1169811029711865/1188222558784420)


involved in Rollup Helper job</description>
    <inlineHelpText>Maximum date of activities on related Engagements</inlineHelpText>
    <label>Date of Last Activity</label>
    <type>Date</type>
</CustomField>