POC/force-app/main/default/objects/Account/fields/Date_of_Last_CS_Activity_new__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_CS_Activity_new__c</fullName>
    <description>Maximum date of CS activities on related Events (https://app.asana.com/0/1203315724044772/1205604221786156/f).</description>
    <inlineHelpText>Max date of CS activities on related Events</inlineHelpText>
    <label>Date of Last CS Activity</label>
    <type>Date</type>
</CustomField>