POC/force-app/main/default/objects/Account/fields/Date_of_Last_Sales_Activity_Account__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Sales_Activity_Account__c</fullName>
    <description>Maximum date of last Sales activity on the Account level.  Populated by Process Builder (Update Date of Last Sales Activity) or Lead field mapping.</description>
    <inlineHelpText>Max date of last Sales activity on the Account</inlineHelpText>
    <label>Date of Last Sales Activity - Account</label>
    <type>Date</type>
</CustomField>