POC/force-app/main/default/objects/Account/fields/Date_of_Last_Sales_Activity_Roll__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Sales_Activity_Roll__c</fullName>
    <description>Maximum date of last Sales activity from related Opportunities.</description>
    <inlineHelpText>Max date of last Sales activity from related Opportunities.</inlineHelpText>
    <label>Date of Last Sales Activity (Roll)</label>
    <summarizedField>Opportunity.Date_of_Last_Sales_Activity__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>