POC/force-app/main/default/objects/Account/fields/Date_of_Partner_Activation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Partner_Activation__c</fullName>
    <description>Date of the Partner&#39;s first activity (task link)</description>
    <inlineHelpText>Date of the Partner&#39;s first activity</inlineHelpText>
    <label>Date of Partner Activation</label>
    <type>Date</type>
</CustomField>