POC/force-app/main/default/objects/Account/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <description>Last activity associated with this Account occurred this many days ago</description>
    <formula>IF(
    ISBLANK(LastActivityDate_Account__c) &amp;&amp; ISBLANK(LastActivityDate_Lead__c),
    NULL,
    IF(
        ISBLANK(LastActivityDate_Account__c),
        TODAY() - LastActivityDate_Lead__c,
        IF(
            ISBLANK(LastActivityDate_Lead__c),
            TODAY() - LastActivityDate_Account__c,
            MIN(
                TODAY() - LastActivityDate_Account__c, 
                TODAY() - LastActivityDate_Lead__c
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last activity on Account occurred this many days ago</inlineHelpText>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>