POC/force-app/main/default/objects/Account/fields/Days_Since_Last_Closed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Closed_Opportunity__c</fullName>
    <description>The most recent opportunity close (won, lost, or not qualified) occurred this many days ago.</description>
    <formula>TODAY() -  Last_Closed_Oppportunity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Most recent opportunity close (won, lost, or not qualified) occurred this many days ago</inlineHelpText>
    <label>Days Since Last Closed Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>