POC/force-app/main/default/objects/Account/fields/Days_Since_Last_CS_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_CS_Activity__c</fullName>
    <description>Calculates days between today and Date of Last CS Activity</description>
    <formula>IF(TODAY() -  Date_of_Last_Activity__c  = -1, 0, TODAY() - Date_of_Last_Activity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between today and Date of Last CS Activity</inlineHelpText>
    <label>Days Since Last CS Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>