POC/force-app/main/default/objects/Account/fields/Days_Since_Last_QBR__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_QBR__c</fullName>
    <description>Days Since Last QBR (https://app.asana.com/0/1169811029711865/1200563413862977)</description>
    <formula>IF(ISBLANK(QBR_Date__c), null,  NOW() - QBR_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days Since Last QBR</inlineHelpText>
    <label>Days Since Last QBR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>