POC/force-app/main/default/objects/Account/fields/Days_Since_Last_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Sales_Activity__c</fullName>
    <description>Calculates number of days between today and the last Sales Activity on any Opportunity</description>
    <formula>IF(TODAY() -  Date_of_Last_Sales_Activity_Roll__c  = -1, 0, TODAY() - Date_of_Last_Sales_Activity_Roll__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between today and the last Sales Activity on any Opportunity</inlineHelpText>
    <label>Days Since Last Sales Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>