POC/force-app/main/default/objects/Account/fields/Days_Since_Most_Recent_Premium_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Most_Recent_Premium_Upgrade__c</fullName>
    <description>Calculates number of days between today and Most Recent Conversion Upgrade Date</description>
    <formula>TODAY() - Most_Recent_Premium_Upgrade_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between today and Most Recent Conversion Upgrade Date</inlineHelpText>
    <label>Days Since Most Recent Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>