POC/force-app/main/default/objects/Account/fields/Days_to_Partner_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Partner_Activation__c</fullName>
    <description>Indicates how many days it has taken for each partner to be activated from the date of program entry.</description>
    <formula>Date_of_Partner_Activation__c -  Date_Joined_Program__c</formula>
    <label>Days to Partner Activation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>