POC/force-app/main/default/objects/Account/fields/DaysSinceClosedCoachingCallOppty__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceClosedCoachingCallOppty__c</fullName>
    <description>Formula showing the days since the Last Coaching Call Opportunity Close Date and today.

https://na34.salesforce.com/a0b6100000S8G34</description>
    <formula>TODAY()-LastCoachingCallOpportunityDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Closed Coaching Call Oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>