POC/force-app/main/default/objects/Account/fields/dCS_Growth_Target__c.field-meta.xml
<CustomField>
    <fullName>dCS_Growth_Target__c</fullName>
    <description>Used by CS to create Dedicated CSM target dashboards by updating the Dedicated Band field in Salesforce instead of manually updating Looker filters whenever a new account is added to the Dedicated book of business.

https://asana.lightning.force.com/lightning/r/Project__c/a0b6100001QbCbnAAF/view</description>
    <inlineHelpText>internal 1d28v growth target</inlineHelpText>
    <label>dCS Growth Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retain: 0-9%</fullName>
            </value>
            <value>
                <fullName>Maintain Growth: 10-29%</fullName>
            </value>
            <value>
                <fullName>Accelerate Growth: 30-69%</fullName>
            </value>
            <value>
                <fullName>Accelerate+ Growth: 70-100%+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>