POC/force-app/main/default/objects/Account/fields/Dedicated_CSM__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer success manager assigned to this account
https://app.asana.com/0/515645212208478/1205293049589004/f</description>
    <inlineHelpText>Customer success manager assigned to this account</inlineHelpText>
    <label>CS Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>CS</value>
        </filterItems>
        <filterItems>
            <field>User.RevenueDepartment__c</field>
            <operation>equals</operation>
            <value>DCS</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>