POC/force-app/main/default/objects/Account/fields/Dedicated_CSM_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_CSM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedicated CSM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>