POC/force-app/main/default/objects/Account/fields/Dedicated_CSM_Manager_Missmatch__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_CSM_Manager_Missmatch__c</fullName>
    <description>To identify accounts with dedicated CSM missmatch</description>
    <formula>Dedicated_CSM_Manager__c  &lt;&gt;  Dedicated_CSM__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dedicated CSM Manager Missmatch</label>
    <type>Checkbox</type>
</CustomField>