POC/force-app/main/default/objects/Account/fields/Dedicated_CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_CSM_Name__c</fullName>
    <description>https://app.asana.com/0/1202710080826437/1205753544392393/f</description>
    <formula>Dedicated_CSM__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dedicated CSM Name</label>
    <type>Text</type>
</CustomField>