POC/force-app/main/default/objects/Account/fields/DedicatedCSMOffice__c.field-meta.xml
<CustomField>
    <fullName>DedicatedCSMOffice__c</fullName>
    <description>Text formula of Account Dedicated CSM Office (https://app.asana.com/0/1169811029711865/1198300134807057)</description>
    <formula>TEXT(Dedicated_CSM__r.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text formula of Account Dedicated CSM Office</inlineHelpText>
    <label>Dedicated CSM Office</label>
    <type>Text</type>
</CustomField>