POC/force-app/main/default/objects/Account/fields/DedicatedCSMRegion__c.field-meta.xml
<CustomField>
    <fullName>DedicatedCSMRegion__c</fullName>
    <description>Text formula of Account Dedicated CSM Region (https://app.asana.com/0/1169811029711865/1198300134807057)</description>
    <formula>TEXT(Dedicated_CSM__r.RevenueRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text formula of Account Dedicated CSM Region</inlineHelpText>
    <label>Dedicated CSM Region</label>
    <type>Text</type>
</CustomField>