POC/force-app/main/default/objects/Account/fields/DedicatedCSMRevenueCode__c.field-meta.xml
<CustomField>
    <fullName>DedicatedCSMRevenueCode__c</fullName>
    <description>https://app.asana.com/0/1199207700370180/1200727975733448</description>
    <formula>Dedicated_CSM__r.RevenueCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dedicated CSM Revenue Code</label>
    <type>Text</type>
</CustomField>