POC/force-app/main/default/objects/Account/fields/DedicatedCSMRole__c.field-meta.xml
<CustomField>
    <fullName>DedicatedCSMRole__c</fullName>
    <description>Text formula of Account Dedicated CSM Role (https://app.asana.com/0/1169811029711865/1198300134807057)</description>
    <formula>TEXT(Dedicated_CSM__r.Business_Function__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text formula of Account Dedicated CSM Role</inlineHelpText>
    <label>Dedicated CSM Role</label>
    <type>Text</type>
</CustomField>