POC/force-app/main/default/objects/Account/fields/Designated_Support_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Designated_Support_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://app.asana.com/0/1206411435319312/1208976306913365/f</description>
    <label>Designated Support Engineer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User must be active.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Designated_Support_Engineers</relationshipName>
    <type>Lookup</type>
</CustomField>