POC/force-app/main/default/objects/Account/fields/Difference_in_Internal_1d28s__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Internal_1d28s__c</fullName>
    <description>Recent Internal 1d28s minus Previous Internal 1d28s</description>
    <formula>IF(ISNULL(recent_internal_1d28s__c), 0, recent_internal_1d28s__c) - IF(ISNULL(previous_internal_1d28s__c), 0, previous_internal_1d28s__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recent Internal 1d28s minus Previous Internal 1d28s</inlineHelpText>
    <label>Change in Internal 1d28s (last 30 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>