POC/force-app/main/default/objects/Account/fields/Display_on_Directory__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the account data is submitted to the Asana website to be displayed on Partner Directory. Occurs every 24h</description>
    <inlineHelpText>Toggles visibility of the account on the Asana website&#39;s Partner Directory page</inlineHelpText>
    <label>(Deprecated) Display on Directory</label>
    <type>Checkbox</type>
</CustomField>