POC/force-app/main/default/objects/Account/fields/Divisions_in_TrueUp__c.field-meta.xml
<CustomField>
    <fullName>Divisions_in_TrueUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/0/1201149208653308/1203157934077385/f

involved in Rollup Helper job</description>
    <label>Divisions in TrueUp</label>
    <type>Checkbox</type>
</CustomField>