POC/force-app/main/default/objects/Account/fields/Domain_Age__c.field-meta.xml
<CustomField>
    <fullName>Domain_Age__c</fullName>
    <description>Calculated difference between today and when the domain was created in Redshift</description>
    <formula>TODAY() - Date_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated difference between today and when the domain was created in Redshift</inlineHelpText>
    <label>Domain Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>