POC/force-app/main/default/objects/Account/fields/Domain_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>Domain_Deleted_Date__c</fullName>
    <description>From Redshift: domains.__trashed_at</description>
    <inlineHelpText>Date when domain was deleted in Redshift</inlineHelpText>
    <label>Domain Deleted Date</label>
    <type>Date</type>
</CustomField>