POC/force-app/main/default/objects/Account/fields/domain_id__c.field-meta.xml
<CustomField>
    <fullName>domain_id__c</fullName>
    <description>From Redshift: domains.__id</description>
    <externalId>true</externalId>
    <inlineHelpText>Domain ID from Redshift, only editable by Admins</inlineHelpText>
    <label>Domain ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>