POC/force-app/main/default/objects/Account/fields/Domain_s_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Domain_s_Payment_Status__c</fullName>
    <description>This field will display the Domain&#39;s Payment Status. Populated via pipeline. 1202636412362996</description>
    <inlineHelpText>The Account&#39;s Invoice Payment Status. Paid Up = All invoices have been paid. Due = The payment has not been paid on the Due Date but has not exceeded the Payment Terms. Dunning = The Account has missed a payment and a balance is outstanding.</inlineHelpText>
    <label>Domain Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Paid Up</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Dunning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>