POC/force-app/main/default/objects/Account/fields/DomainType__c.field-meta.xml
<CustomField>
    <fullName>DomainType__c</fullName>
    <description>Field determinig domain type (https://app.asana.com/1/15793206719/project/1209391763425740/task/1210546430091985?focus=true)</description>
    <inlineHelpText>Type of Domain</inlineHelpText>
    <label>Domain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <default>true</default>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Asana Gov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>