POC/force-app/main/default/objects/Account/fields/EDR__c.field-meta.xml
<CustomField>
    <fullName>EDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Dev/Sales Dev/Enterprise Inside (Dev) Rep lookup.
https://app.asana.com/0/0/1199506071419293/f
https://app.asana.com/0/1156951077655217/1159885654619305/f</description>
    <label>Secondary Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>