POC/force-app/main/default/objects/Account/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked to true by the Non-Profit team if the Account is EDU
https://app.asana.com/0/253313814113822/1202646695063974/f</description>
    <inlineHelpText>Checked to true by the Non-Profit team if the Account is EDU</inlineHelpText>
    <label>Education</label>
    <type>Checkbox</type>
</CustomField>