POC/force-app/main/default/objects/Account/fields/Employee_Count_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Refresh_Date__c</fullName>
    <description>Date on which the value in &#39;Employees&#39; was added, or the date on which the &#39;Employee Count Source&#39; was last refreshed
https://app.asana.com/0/1202710080826437/1203832946782595/f</description>
    <label>Employee Count Refresh Date</label>
    <type>DateTime</type>
</CustomField>