POC/force-app/main/default/objects/Account/fields/Employee_Count_Source__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Source__c</fullName>
    <description>Source of RevOps&#39; determination of the value in Account.Employees. 
https://app.asana.com/0/1199543532541045/1203832946782595/f</description>
    <label>Employee Count Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Next_Employees_Source</valueSetName>
    </valueSet>
</CustomField>