POC/force-app/main/default/objects/Account/fields/Employee_Count_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://app.asana.com/0/515645212208478/1204937820537245/f</description>
    <label>Employee Count Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>