POC/force-app/main/default/objects/Account/fields/Enabled_Domain_Feature_Flags__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Domain_Feature_Flags__c</fullName>
    <description>Concatenated list of all enabled domain feature flags to see if a domain has a certain flag enabled. Note if the flag belongs to an experiment this may not necessarily indicate they are enrolled in that experiment - this must be x-referenced in the domain_experiments table in Redshift. https://app.asana.com/0/1199875313004255/1199987685249042/f</description>
    <label>Enabled Domain Feature Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>