POC/force-app/main/default/objects/Account/fields/Engaged_with_Professional_Services_Count__c.field-meta.xml
<CustomField>
    <fullName>Engaged_with_Professional_Services_Count__c</fullName>
    <description>Count of all Opportunities that have already been escalated to the PS team 
https://app.asana.com/0/1137568576642746/1147724742075617/f</description>
    <inlineHelpText>Count of all Sales Opportunities escalated to Professional Services.</inlineHelpText>
    <label>PS Engaged Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Engaged_with_Professional_Services__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>