POC/force-app/main/default/objects/Account/fields/Enrichment_Industry__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Industry__c</fullName>
    <description>Industry from the Enrichment Engine
https://app.asana.com/0/1203315724044772/1205874290782802/f</description>
    <inlineHelpText>Industry from the Enrichment Engine</inlineHelpText>
    <label>Enrichment Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>