POC/force-app/main/default/objects/Account/fields/Enrichment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Notes__c</fullName>
    <description>https://app.asana.com/0/515645212208478/1204937820537245/f</description>
    <inlineHelpText>We can add task links in this section that are related to our enrichment efforts or hold screenshots/emails that were used to verify the data.</inlineHelpText>
    <label>Enrichment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>