POC/force-app/main/default/objects/Account/fields/Enrichment_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Override_Date__c</fullName>
    <description>Date of the last Enrichment (https://app.asana.com/0/1173635330340929/1200532064378387)</description>
    <inlineHelpText>Date of the last Enrichment</inlineHelpText>
    <label>Enrichment Override Date</label>
    <type>Date</type>
</CustomField>