POC/force-app/main/default/objects/Account/fields/Enrolled_in_CS_Pool__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_CS_Pool__c</fullName>
    <description>Date, when CS Pool was enrolled (https://app.asana.com/0/1169811029711865/1200798133349171)</description>
    <inlineHelpText>Date, when CS Pool was enrolled</inlineHelpText>
    <label>Enrolled in CS Pool</label>
    <type>Date</type>
</CustomField>