POC/force-app/main/default/objects/Account/fields/Estimated_True_Up_ARR_Potential__c.field-meta.xml
<CustomField>
    <fullName>Estimated_True_Up_ARR_Potential__c</fullName>
    <description>https://app.asana.com/0/253313814113822/1202708278415923/f

involved in Rollup Helper job</description>
    <inlineHelpText>Account ARR upside based on seat utilization (when &gt;50%) and internal user count (when &gt; paid seats)</inlineHelpText>
    <label>Estimated True-Up ARR Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>