POC/force-app/main/default/objects/Account/fields/Estimated_True_Up_Billings_Potential__c.field-meta.xml
<CustomField>
    <fullName>Estimated_True_Up_Billings_Potential__c</fullName>
    <description>https://app.asana.com/0/253313814113822/1202708278415923/f

involved in Rollup Helper job</description>
    <inlineHelpText>True-Up ARR upside adjusted for renewal date by multiplying by contract months remaining/12</inlineHelpText>
    <label>Estimated True-Up Billings Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>