POC/force-app/main/default/objects/Account/fields/EU_Data_Center_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Data_Center_Start_Date__c</fullName>
    <description>Shows the date that and Account was moved to the EU Data Center. Set via workflow rule, dependent on the Account on EU Data Center (Account_on_EU_Data_Center) field. Reference: https://app.asana.com/0/1132572100452632/1152066490471481/f</description>
    <inlineHelpText>Shows the date that and Account was moved to the EU Data Center.</inlineHelpText>
    <label>EU Data Center Start Date</label>
    <type>DateTime</type>
</CustomField>